[package]
name = "wayle-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits", "full"] }

[dev-dependencies]
tokio.workspace = true
toml.workspace = true
wayle-config = { path = "../wayle-config" }

[lints]
workspace = true
