[package]
name = "wayle-icons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Icon management for Wayle with CDN fetching and GTK integration"
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
gtk4.workspace = true
notify.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
usvg = "0.46"

[lints]
workspace = true
