[package]
name = "wayle-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayle desktop shell - GUI panel and widgets"
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
# gtk4-layer-shell MUST be first - it shims libwayland calls
gtk4-layer-shell.workspace = true
gtk4.workspace = true
gdk4.workspace = true
bytesize.workspace = true
chrono.workspace = true
console.workspace = true
glob.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
futures.workspace = true
rust-embed.workspace = true
indicatif.workspace = true
notify.workspace = true
relm4.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
evdev = { version = "0.13", features = ["stream-trait"] }

# Service dependencies
wayle-audio.workspace = true
wayle-battery.workspace = true
wayle-bluetooth.workspace = true
wayle-brightness.workspace = true
wayle-cava.workspace = true
wayle-config.workspace = true
wayle-core.workspace = true
wayle-ipc.workspace = true
minijinja.workspace = true
wildcard.workspace = true
wayle-hyprland.workspace = true
wayle-icons.workspace = true
wayle-idle-inhibit.workspace = true
wayle-media.workspace = true
wayle-niri.workspace = true
wayle-network.workspace = true
wayle-notification.workspace = true
wayle-power-profiles.workspace = true
wayle-styling = { workspace = true }
wayle-sysinfo.workspace = true
wayle-systray = { workspace = true, features = ["adapter-gtk"] }
wayle-wallpaper.workspace = true
wayle-weather.workspace = true
wayle-widgets = { workspace = true }
zbus.workspace = true

[dev-dependencies]
glob.workspace = true

[lints]
workspace = true
